<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainFragment"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logView"
            android:layout_width="match_parent"
            android:layout_height="254dp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizePresetSizes="14sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_corner"
            android:fontFamily="monospace"
            android:scrollbars="vertical"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Bluetooth Advertising"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ble_power_mode"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/balanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/balanced"
                android:textColor="#FF103E3A" />

            <RadioButton
                android:id="@+id/low_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:minHeight="48dp"
                android:text="@string/low"
                android:textColor="#FF103E3A" />

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ble_tx_strength"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tx_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/high"
                android:textColor="#FF103E3A" />

            <RadioButton
                android:id="@+id/tx_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/medium"
                android:textColor="#FF103E3A" />

            <RadioButton
                android:id="@+id/tx_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:minHeight="48dp"
                android:text="@string/low"
                android:textColor="#FF103E3A" />

            <RadioButton
                android:id="@+id/tx_ultra_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:minHeight="48dp"
                android:text="@string/ultra_low"
                android:textColor="#FF103E3A" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="98dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/fingerprint"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:background="@drawable/rounded_button"
                android:src="?android:attr/fingerprintAuthDrawable" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>